[package]
name = "timecard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
elasticsearch = { version = "8.5.0-alpha.1" }
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
